...
                    app:iconRight="@{vm.iconRight}"
                    android:id="@+id/contact_list_toolbar"
                    layout="@layout/toolbar" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_add_new_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:onClick="@{()-> vm.addNewContact()}"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|right"
...
